--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,5 +1,3 @@
-# GitHub Actions Workflow for deploying a Next.js 13 site to GitHub Pages
-
 name: Deploy Next.js 13 site to Pages
 
 on:
@@ -32,13 +30,13 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      - name: Build with Next.js (standalone mode)
+      - name: Build with Next.js
         run: yarn next build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ".next/standalone"
+          path: "./out" # 빌드된 파일이 저장된 out 디렉터리
 
   deploy:
     environment:
